[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/enemies/SecurityDrone.gd" id="1_drone"]
[ext_resource type="Script" path="res://scripts/systems/HealthSystem.gd" id="2_health"]
[ext_resource type="Script" path="res://scripts/systems/CombatSystem.gd" id="3_combat"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(32, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 200.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(32, 24)

[node name="SecurityDrone" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 1
script = ExtResource("1_drone")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="HealthSystem" type="Node" parent="."]
script = ExtResource("2_health")
max_health = 75

[node name="CombatSystem" type="Node2D" parent="."]
script = ExtResource("3_combat")
damage = 20
attack_range = 150.0
attack_cooldown = 2.0

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_1")

[node name="VisualBody" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -12.0
offset_right = 16.0
offset_bottom = 12.0
color = Color(0.4, 0.4, 0.6, 1)

[node name="LED" type="ColorRect" parent="VisualBody"]
layout_mode = 0
offset_left = 12.0
offset_top = -4.0
offset_right = 16.0
offset_bottom = 0.0
color = Color(0, 1, 0, 1)

[node name="Propellers" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="PropLeft" type="ColorRect" parent="Propellers"]
layout_mode = 0
offset_left = -20.0
offset_top = -8.0
offset_right = -16.0
offset_bottom = -4.0
color = Color(0.6, 0.6, 0.6, 1)

[node name="PropRight" type="ColorRect" parent="Propellers"]
layout_mode = 0
offset_left = 16.0
offset_top = -8.0
offset_right = 20.0
offset_bottom = -4.0
color = Color(0.6, 0.6, 0.6, 1)

[node name="LaserSight" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 150, 0)
width = 2.0
default_color = Color(1, 0, 0, 0.5)
visible = false